meta-lead-ads-package/main/default/objects/Meta_Lead_Assignment__c/Meta_Lead_Assignment__c.object-meta.xml
<CustomObject>
    <label>Meta Lead Assignment</label>
    <nameField>
        <label>Meta Lead Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meta Lead Assignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>