meta-lead-ads-package/main/default/objects/Meta_Lead_Assignment__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>Meta_Form__c</referenceTo>
    <relationshipLabel>Meta Lead Assignment</relationshipLabel>
    <relationshipName>Meta_Lead_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>