meta-lead-ads-package/main/default/objects/Meta_Lead_Assignment__c/fields/Form_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_ID__c</fullName>
    <label>Form ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>