meta-lead-ads-package/main/default/objects/Meta_Lead_Assignment__c/fields/Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_ID__c</fullName>
    <label>Owner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>